--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -2,6 +2,13 @@
 <head>
     <% include ../header.ejs %>
     <link rel="stylesheet" type="text/css" href="/stylesheets/post_show.css">
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="http://malsup.github.com/jquery.form.js"></script>
+    <script>
+        $(document).ready(function(){
+
+        });
+    </script>
 </head>
 <body>
 <% include ../body.ejs %>
