--- a/public/stylesheets/post.css
+++ b/public/stylesheets/post.css
@@ -1,5 +1,6 @@
 .simple_form_new_recipe  dd{
   height: auto;
+  width: 850px;
 }
 
 legend{
@@ -46,6 +47,7 @@ color: #3b3b3b;
 .sec_add_recipe dd .dd-chunk {
   margin-bottom: 20px;
   overflow: hidden;
+  display: inline-block;
 }
 
 .sec_add_recipe input{
@@ -99,26 +101,28 @@ color: #505050;
 }
 
 #del_recipe {
+  display: inline-block;
   cursor: default;
   color:#313131;
-  width: 790px;
-  height: 45px;
+  width: 60px;
+  height: 26px;
   border: 1px solid #e1e1e1;
   background-color: #f5f5f5;
   text-indent: 20px;
   font-family: 'NST';
   font-size: 16px;
-  margin-bottom: 8px;
-  margin-left: 8px;
+  padding-right: 10px;
   position: relative;
   bottom:11px;
 }
 
 .btn_add {
+  display: inline-block;
+  float:left;
   cursor: default;
   color:#313131;
-  width: 790px;
-  height: 45px;
+  width: 100px;
+  height: 26px;
   border: 1px solid #e1e1e1;
   background-color: #f5f5f5;
   text-indent: 20px;
@@ -127,7 +131,7 @@ color: #505050;
   margin-bottom: 8px;
 }
 
-.ex_filename {
+.rgt.upload-hidden.ex_filename {
   position: absolute;
   width: 1px;
   height: 1px;
