모임페이지 db데이터 연동 및 ajax통신으로 변경

--- a/views/meetings/main.ejs
+++ b/views/meetings/main.ejs
@@ -63,11 +63,11 @@
             <ol class="main_recipe">
               <% for(i=0;i<location.length;i++){ %>
                 <li>
-                    <a class="recipe tumb">
+                    <a class="recipe tumb" href="/meetings/show/<%=location[i]._id %>">
                         <img src="imgs/user/<%=location[i].img%>">
                     </a>
                     <span class="author">
-                      <a herf="">
+                      <a href="">
                         <img src="imgs/user/<%=location[i].user[0].img%>">
                       </a>
                       <strong>
