--- a/views/meetings/new.ejs
+++ b/views/meetings/new.ejs
@@ -5,8 +5,10 @@
     <script src="//code.jquery.com/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="http://malsup.github.com/jquery.form.js"></script>
     <script type="text/javascript">
 
+    	//구글맵 초기화
     	var marker;
     	function initMap() {
 	        var map = new google.maps.Map(document.getElementById('map'), {
@@ -54,6 +56,49 @@
 				reader.readAsDataURL($(this)[0].files[0]);
 			});
 
+			$('input:text').keydown(function(event){
+            	if(event.keyCode==13) return false;
+            });
+
+            //ajax통신
+            $('#meeting_form').ajaxForm({
+              dataType:'json',
+              beforeSubmit:function(){
+                var title=$('#title').val();
+                var address=$('#address').val();
+                var file=$('#ex_filename')[0].files[0];
+
+                $('#err_title').text("");
+                $('#err_address').text("");
+                $('#err_img').text("");
+
+                if(!title){
+                	$('#err_title').text("모임제목을 입력해주세요");
+                	location.href="#bookmark_title";
+                	return false;
+                }
+                else if(!address){
+                	$('#err_address').text("주소를 입력해주세요");
+                	location.href="#bookmark_address";
+                	return false;
+                }
+            	else if(!file){
+                	$('#err_img').text("사진을 넣어주세요");
+                	location.href="#bookmark_img";
+                	return false;
+                }
+                else return true;
+              },
+              success:function(result){
+                if(result['err']==0){
+                  location.href='/meetings';
+                }
+                else if(result['err']==1){
+                  $('#err_title').text(result['msg']);
+                }
+              }
+            });
+
 
 		});
     </script>
@@ -66,28 +111,28 @@
 	<section class="sec_add_meetting">
 		<h1>모임 만들기</h1>
 		<form id="meeting_form" action="/meetings/new" method="post" enctype="multipart/form-data">
-			<dt><h2>모임 제목</h2></dt>
-			<dd><input type="text" name="title" id="title"><div id="err_msg"><%=err_title%></div></dd>
+			<dt><h2 id="bookmark_title">모임 제목</h2></dt>
+			<dd><input type="text" name="title" id="title"><br><span id="err_title" class="err_msg"></span></dd>
 			<dt><h2>모임 내용</h2></dt>
 			<dd><textarea  name="text" id="text"></textarea></dd>
 			<dt><h2>모임 날짜</h2></dt>
 			<dd><input type="date" name="date" id="date" value="<%=date%>"></dd>
 			<dt><h2>모임 시간</h2></dt>
 			<dd><input type="time" name="time" id="time" value="<%=time%>"></dd>
-			<dt><h2>모임 장소</h2></dt>
+			<dt><h2 id="bookmark_address">모임 장소</h2></dt>
 			<dd>
 				<input type="text" name="address" id="address"><input type="button" id="search_address" value="검색">
-				<div id="err_msg"><%=err_address%></div>
+				<br><span id="err_address" class="err_msg"></span>
 				<div id="map"></div>
 			</dd>
-			<dt><h2>사진 첨부</h2></dt>
+			<dt><h2 id="bookmark_img">사진 첨부</h2></dt>
 			<dd>
 				<ul class="lst_mate" id="recipe">
 					<li class="recipe-info" id="upload_li">
 						<img src="/imgs/user/noimg.png" id="upload_img">
 						<label for="ex_filename" id="upload_btn">업로드</label>
 						<input type="file" class="rgt upload-hidden ex_filename" name="userPhoto" id="ex_filename">
-						<div id="err_msg"><%=err_img%></div>
+						<br><span id="err_img" class="err_msg"></span>
 					</li>
 				</ul>
 			</dd>
