--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -67,7 +67,7 @@
         <label>비밀번호 확인</label><span class='err_msg' id='err_pw_confirm'></span><br>
         <input type="text" class="password_confirm" name="password_confirm"><br>
         <label>프로필사진 변경</label><br>
-        <input type="file" class="rgt upload-hidden" name="userPhoto"><br><br>
+        <input type="file" class="rgt upload-hidden" name="userPhoto" accept="image/*"><br><br>
         <button type="submit">확인</button><br>
       </div>
     </form>
