--- a/public/stylesheets/post.css
+++ b/public/stylesheets/post.css
@@ -100,22 +100,6 @@ color: #505050;
   margin-left: 8px;
 }
 
-#del_recipe {
-  display: inline-block;
-  cursor: default;
-  color:#313131;
-  width: 60px;
-  height: 26px;
-  border: 1px solid #e1e1e1;
-  background-color: #f5f5f5;
-  text-indent: 20px;
-  font-family: 'NST';
-  font-size: 16px;
-  padding-right: 10px;
-  position: relative;
-  bottom:11px;
-}
-
 .btn_add {
   display: inline-block;
   float:left;
@@ -156,6 +140,7 @@ color: #505050;
   border-radius: .25em;
   position: relative;
   bottom:15px;
+  left:7px;
 }
 
 #upload_img{
@@ -172,4 +157,39 @@ color: #505050;
   font-family: 'NST';
   font-size: 16px;
   padding: 20px 20px 20px 20px;
+}
+
+#inset_recipe {
+  display: inline-block;
+  padding: .5em .75em;
+  color: #999;
+  font-size: inherit;
+  line-height: normal;
+  vertical-align: middle;
+  background-color: #fdfdfd;
+  cursor: pointer;
+  border: 1px solid #ebebeb;
+  border-bottom-color: #e2e2e2;
+  border-radius: .25em;
+  position: relative;
+  left:-75px;
+  top:-60px;
+
+}
+
+#del_recipe {
+  display: inline-block;
+  padding: .5em .75em;
+  color: #999;
+  font-size: inherit;
+  line-height: normal;
+  vertical-align: middle;
+  background-color: #fdfdfd;
+  cursor: pointer;
+  border: 1px solid #ebebeb;
+  border-bottom-color: #e2e2e2;
+  border-radius: .25em;
+  position: relative;
+  left:-75px;
+  top:-60px;
 }
